feature-body implementations

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -12,8 +12,7 @@
 .header__logo {
   width: 100px;
   object-fit: contain;
-  margin: 0 20px;
-  margin-top: 18px;
+  margin: 18px 20px 0 20px;
 }
 
 .header__search {
